--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <title>My Resume</title>
 
-  <title>My Resume</title>
+    <link rel="stylesheet" href="css/index.css" />
 
-  <link rel="stylesheet" href="css/index.css">
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+  <body>
+    <header>
+      <div class="nav-box">
+        <nav>
+          <a id="first" href="#">About</a>
+          <a id="second" href="#">Skills</a>
+          <a id="third" href="#">History</a>
+          <a id="fourth" href="#">Contact</a>
+        </nav>
+      </div>
+      <div id="me">
+        <div>
+          <h1>David Copperfield</h1>
+        </div>
 
-<body>
-  <h1>My Resume</h1>
-</body>
+        <div id="portrait">
+          <img src="tweed-cap.jpg" alt="tweed-cap" />
+        </div>
+      </div>
+    </header>
+    <section class="show-off"></section>
+    <section></section>
+  </body>
 </html>
