working on mobile view

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <script src="https://kit.fontawesome.com/2334b971e4.js" crossorigin="anonymous"></script>
     <title>My Resume</title>
 
     <link rel="stylesheet" href="css/index.css" />
@@ -15,25 +16,85 @@
 
   <body>
     <header>
-      <div class="nav-box">
-        <nav>
-          <a id="first" href="#">About</a>
-          <a id="second" href="#">Skills</a>
-          <a id="third" href="#">History</a>
-          <a id="fourth" href="#">Contact</a>
-        </nav>
-      </div>
+      <nav>
+        <a id="first" href="#">About</a>
+        <a id="second" href="#">Skills</a>
+        <a id="third" href="#">History</a>
+        <a id="fourth" href="#">Contact</a>
+      </nav>
+
       <div id="me">
         <div>
           <h1>David Copperfield</h1>
+
+          <section class="show-off">
+            <p>
+              You should hire me because, well... Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+              perspiciatis optio aliquam, error quas id dignissimos consequuntur explicabo vel, magni eum, eaque
+              excepturi! Aliquid magnam tenetur culpa quaerat, sequi rem?
+            </p>
+          </section>
         </div>
 
         <div id="portrait">
           <img src="tweed-cap.jpg" alt="tweed-cap" />
         </div>
       </div>
+
+      <hr />
     </header>
-    <section class="show-off"></section>
-    <section></section>
+
+    <section class="business">
+      <div class="skills">
+        <h2>Skills</h2>
+        <ul>
+          <li>
+            <i class="fas fa-code"></i>
+          </li>
+
+          <li>
+            <i class="fab fa-js-square"></i>
+          </li>
+
+          <li>
+            <i class="fab fa-css3"></i>
+          </li>
+
+          <li>
+            <i class="fab fa-react"></i>
+          </li>
+          <li>
+            <i class="fab fa-python"></i>
+          </li>
+          <li>
+            <i class="fab fa-java"></i>
+          </li>
+        </ul>
+      </div>
+
+      <div class="history">
+        <h2>History</h2>
+        <ul>
+          <li>Powdermonkey on the Black Pearl</li>
+          <li>Napoleon's personal shoe shiner</li>
+          <li>Ben Franklin's assistant printer</li>
+          <li>George Washingtons's Cattle Keeper</li>
+        </ul>
+      </div>
+
+      <div class="contact">
+        <h2>Contact</h2>
+        <ul>
+          <li>
+            DavidCopperfield1882@snailmail.com
+          </li>
+          <li>345 Old Alley Way, Pennsylvnia</li>
+          <li>(111) 222-3333</li>
+        </ul>
+      </div>
+    </section>
+    <footer>
+      Copywright Copperfield 2019
+    </footer>
   </body>
 </html>
