--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>
               You should hire me because, well... Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
               perspiciatis optio aliquam, error quas id dignissimos consequuntur explicabo vel, magni eum, eaque
-              excepturi! Aliquid magnam tenetur culpa quaerat, sequi rem?
+              excepturi! Aliquid magnam tenetur culpa quaerat, sequi rem? Got that?
             </p>
           </section>
         </div>
